tests/file_test/testdata/chained_minus_number.llang
# following line should not have two `-`
# it is not supported

let x = - - 4;
